tests/netconvert/import/XML/errors/broken_edge/edge#tonode__missing1/errors.netconvert
Error: The to-node is not given for edge '1'.
Quitting (on error).
